--- a/Server/MusicLibraryAPI/appsettings.json
+++ b/Server/MusicLibraryAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source={0}\\MusicLibraryDAL\\\\MusicLibrary.db;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
