Created CRUD functionalities for song

--- a/Server/MusicLibraryAPI/MusicLibraryAPI.csproj
+++ b/Server/MusicLibraryAPI/MusicLibraryAPI.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MusicLibraryBLL\MusicLibraryBLL.csproj" />
     <ProjectReference Include="..\MusicLibraryDAL\MusicLibraryDAL.csproj" />
   </ItemGroup>
 
